Fix shop item image clipping

--- a/src/components/ShopItem/ShopItem.module.css
+++ b/src/components/ShopItem/ShopItem.module.css
@@ -5,5 +5,6 @@
 }
 
 .wrapper img {
+  max-width: 95%;
   max-height: 400px;
 }
